# PhyloSmew

./: .gitignore  .gitmodules  README.md  Snakefile  broken_tb_msas.txt  config.yaml  dash_app.py  inference_tools.py  make_plots.py  msa_parser.py  pyproject.toml  scripts.py  util.py
recipe/: meta.yaml
src/phylosmew/: aggregate.py  cli.py  runner.py
src/phylosmew/legacy/: inference_tools.py  scripts.py  util.py
src/phylosmew/libs/: __init__.py
src/phylosmew/templates/: config.default.yaml  inference_tools.user.py
src/phylosmew/visualize/: dash_app.py
src/phylosmew/workflow/: Snakefile
